<resources>
    <string name="login_label">Connect with twitter</string>
    <string name="app_name">MyTwitter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="compose_hint">What\'s happening</string>
    <string name="send">Tweet</string>
    <string name="title_activity_tweet_detail">TweetDetailActivity</string>
    <string name="Button_Reply">Reply</string>
    <string name="Button_Retweet">ReTweet</string>
    <string name="Button_Like">Like</string>
    <string name="Button_Share">Share</string>
    <string name="profile">Profile</string>
    <string name="compose">Compose</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name">Name</string>
    <string name="tagline">TagLine</string>
    <string name="user_profile_followers">5 Followers</string>
    <string name="user_profile_following">5 Following</string>
    <string name="title_activity_following">FollowingActivity</string>
    <string name="title_activity_followers">FollowersActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search">Search Twitter</string>
    <string name="message">Messages</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="in_reply_to">In reply to</string>
    <string name="message_cancel">Cancel</string>
    <string name="message_send">Send</string>
</resources>
